letter-spacing fix

--- a/style/desktop.css
+++ b/style/desktop.css
@@ -49,4 +49,5 @@ article br {
 
 p {
   text-indent: 5%;
+  letter-spacing: 0.05em;
 }
